sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:3: error: not found: value getNombreValeurs
  for (i<- 1 to getNombreValeurs()-1){
                ^